--- a/main.css
+++ b/main.css
@@ -3,24 +3,40 @@
 }
 
 div {
-  background-color: rgb(227, 231, 227);
+  background-color: #48e248;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;*/
+  font-size: 60px; 
 }
 
- /* {
- display: flex;
- flex-direction: column;
-} */
-
 section {
+  background-color: #faebd7;
   height: 100vh;
   display: grid;
-  /* fr */
-  gap: 5px;
-  /* row-gap: 1px;
-  column-gap: 5px; */
-  /* grid-auto-flow: column; */
-    grid-template-columns: 1fr 3fr 1fr;
-    /* grid-template-columns: repeat(3, 1fr); */
-    grid-template-rows: 1fr 1fr 1fr;
-    /* grid-template-rows: 100px 1fr 100px; */
+  gap: 3px;
+  /* grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px ;
+  justify-content: space-evenly;
+  align-content: space-evenly; */
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+}
+
+
+section div:nth-child(4) {
+  background-color: #b366be;
+  align-self: end;
+  justify-self: end;
+}
+
+section div:first-child {
+  justify-self: start;
+}
+
+section div:nth-child(2),
+section div:nth-child(3) {
+  justify-self: end;
 }
