--- a/main.css
+++ b/main.css
@@ -1,42 +1,22 @@
-* {
-  margin: 0;
+/* #heading {
+  color: red;
+  background-color: yellow;
+  font-size: 24px;
+} */
+
+/* [data-something] {
+
+} */
+
+.photo {
+  border: 10px solid #f0f;
+  border-radius: 50%;
+  width: 200px;
 }
 
-div {
-  background-color: #48e248;
-  /* display: flex;
-  justify-content: center;
-  align-items: center;*/
-  font-size: 60px; 
-}
-
-section {
-  background-color: #faebd7;
-  height: 100vh;
-  display: grid;
-  gap: 3px;
-  /* grid-template-columns: 100px 100px 100px;
-  grid-template-rows: 100px 100px 100px ;
-  justify-content: space-evenly;
-  align-content: space-evenly; */
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  align-items: center;
-  justify-items: center;
-}
-
-
-section div:nth-child(4) {
-  background-color: #b366be;
-  align-self: end;
-  justify-self: end;
-}
-
-section div:first-child {
-  justify-self: start;
-}
-
-section div:nth-child(2),
-section div:nth-child(3) {
-  justify-self: end;
+.text {
+  text-decoration: underline;
+  font-size: 40px;
+  color: #f66;
+  font-style: italic;
 }
